--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dom-to-image": "^2.6.0",
     "extract-colors": "^4.0.6",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-eye-dropper": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "^8",
