--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dom-to-image": "^2.6.0",
+    "dom-to-image-more": "^3.3.0",
+    "gradient2svg": "^0.0.4",
+    "html-react-parser": "^5.1.10",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-best-gradient-color-picker": "^3.0.8",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-zoom-pan-pinch": "^3.6.1",
+    "svg-gradient": "^1.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-eye-dropper": "^1.6.1"
