--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -25,6 +27,8 @@
     "react": "^18",
     "react-best-gradient-color-picker": "^3.0.8",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
+    "react-moveable": "^0.56.0",
     "react-zoom-pan-pinch": "^3.6.1",
     "sharp": "^0.33.4",
     "svg-gradient": "^1.0.3",
