--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "svgson": "^5.3.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "^8",
