--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "gradient2svg": "^0.0.4",
     "html-to-image": "^1.11.11",
+    "immer": "^10.1.1",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "react": "^18",
